--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@ Non puoi mettere in pausa, tornare indietro o riascoltare.
 
 <div id="timer">Tempo: --:--</div>
 
-<audio id="audio" src="S.wav"></audio>
+<audio id="audio" src="S.mp3"></audio>
+
 
 <div id="end-message" class="hidden">
   <h2>🏁 Il test è terminato.</h2>
